tests/auto/qmlls/utils/data/highlights/invalid/highlightsShift_consoleLog_del.qml
import QtQuick

HasEnumAndAttachedType {
    property var enumValue: 1
    Component.onCompleted: 
        console.log(enumValue)
    }
}
